--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,8 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build and run with Docker Compose
       run: |
-        docker-compose build
-        docker-compose up -d
+        docker-compose up --build
     - name: Check for errors
       run: |
         docker-compose logs
