--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,13 +10,13 @@ jobs:
 
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v3
     - name: Build and run with Docker Compose
       run: |
-        docker-compose up --build
+        docker-compose up -d
     - name: Check for errors
       run: |
         docker-compose logs
